# sfrpfr

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: auto-commit-push.ps1
.github/workflows/: ci.yml  deploy-vps.yml
apps/: README.md
apps/admin/: .env.example  next-env.d.ts  package-lock.json  package.json
apps/cabinet/: package-lock.json  package.json
docs/: apache-vhost-admin.taxi-doroga-dobra.ru.conf  apache-vhost-api.taxi-doroga-dobra.ru.conf  apache-vhost-cabinet.taxi-doroga-dobra.ru.conf  apache-vhost-taxi-doroga-dobra.ru.conf  architecture.md  b2c-architecture.md  b2c-customer-journey.md  b2c-monetization-model.md  b2c-monetization-tz.md  deploy-vps.md  ops-mvp-checklist.md  ops-runbook.md  vps-secrets-checklist.md  yookassa-setup.md
docs/contracts/: individual-order-template.md  offer-draft.md
docs/history/: conversation.md  project.md  requisites-pod-prismotrom.md
docs/specs/: 01-architecture.md  02-public-site-wordpress.md  03-client-cabinet.md  04-admin-cabinet.md  README.md  (+7 more)
knowledge/: .gitkeep  sfr_norms.md
scripts/: auto_commit_push.ps1  deploy_max_miniapp.sh  init_db.py  max_listen_chat_id.py  ops_check.ps1  ops_check.sh  render_landing_tz_docx.py  setup_github_vps_secrets.ps1  vps_bootstrap.sh  vps_deploy.sh  vps_set_env_key.sh  vps_setup_sheets.sh  wp_apply_branding.php  wp_apply_landing_css.php  wp_create_lead_form.php  wp_ensure_lead_form.php  wp_install_stack.sh  wp_seed_landing.sh  wp_seed_site_tz02.sh
supabase/: config.toml
(+148 files in other folders)
