[project]
name = "sfrfr"
version = "0.1.0"
description = "Автоматизация аудита и сопровождения пенсионных дел (СФР)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sergey Bogdanovsky" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "supabase>=2.7.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "cryptography>=43.0.0",
  "pypdf>=4.3.1",
  "pdf2image>=1.17.0",
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
  "opencv-python-headless>=4.10.0",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "openpyxl>=3.1.5",
  "jinja2>=3.1.4",
  "python-docx>=1.1.2",
  "typer>=0.12.3",
  "tenacity>=8.5.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
ai = [
  "openai>=1.40.0",
  "langchain>=0.2.14",
  "langchain-community>=0.2.12",
  "chromadb>=0.5.5",
  "tiktoken>=0.7.0",
]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0",
]

[project.scripts]
sfrfr = "sfrfr.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
